# standardizer

./: .env.example  .flake8  .gitignore  .python-version  README.md  pyproject.toml
standardizer/: chroma.py  html_indexer.py  main.py  notion.py  standard_generator.py  tracer.py
