[tool.poetry]
name = "standardizer"
version = "0.1.0"
description = ""
authors = ["Pierre Merienne"]
readme = "README.md"
packages = [{ include = "standardizer" }]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
python-dotenv = "^1.0.1"
gradio = "^5.4.0"
loguru = "^0.7.2"
haystack-ai = "2.6.1"
chroma-haystack = "^1.0.0"
langfuse-haystack = "^0.5.0"
notion-haystack = "^1.0.0"

[tool.poetry.scripts]
standardizer = "standardizer.main:launch_ui"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 160
ignore = [
    "E402", # Module level import not at top of file
]
